--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81b746e2-4e19-4d98-8d3f-b4a428cd6647",
+   "id": "70218879",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ffc7aa53-4d1e-47c7-8b5c-ebb79e6819e1",
+   "id": "a7b76eaa",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b60dec40-a821-4c58-937a-d98c90e8e85f",
+   "id": "a62b3641",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9c97d43-f5c5-4353-9b4e-098d383220f0",
+   "id": "f98da0ef",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c418045a-35d2-41b1-96b6-b07b7f6a2116",
+   "id": "e3a5005b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f1e956ac-612d-482d-9bb3-58ad1b4760ef",
+   "id": "b1273f2e",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dc9d795e-a243-4e92-8a8e-b1ceb071fc32",
+   "id": "0a9b6dd0",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66435e49-0ecb-4037-a69e-d7e0ecd28764",
+   "id": "dcd21c41",
    "metadata": {},
    "source": [
     "<h3>Описание вспомогательных функций</h3>"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8c099c1-eeaf-4556-9e46-79f3595c2748",
+   "id": "9d04d843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "35b6ac5b-0ecc-412d-8f5a-f0f324ca330f",
+   "id": "9f57d197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "109a0584-8bbe-4a07-bfad-35c615e7ac15",
+   "id": "7095f5f0",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7739bc5c-a751-416f-a090-53b00f28e8cc",
+   "id": "6bf01eea",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1705f2d7-49b2-49eb-8959-7641d17829c2",
+   "id": "1c551ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8b514e0a-c5a7-4ff0-95b6-81d4098b602e",
+   "id": "574a371b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "af8c0836-321a-4192-84e9-841667f85223",
+   "id": "f78e105b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a03c9399-0462-47cd-9bb5-1d0782ffbe24",
+   "id": "468bc803",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "80ab1722-cc48-4b12-a966-0c8f82673869",
+   "id": "6e3919b0",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bb5758e5-5054-4d5a-b989-2ad4034efe56",
+   "id": "7243bf39",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "10a078c4-6492-4135-bc95-0796ed7ba9bd",
+   "id": "4cf80977",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5f678829-b545-4c4c-a4e9-77b5433ce720",
+   "id": "a9e532f5",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5f7bd704-6b94-4e56-8264-dbfb19adeb52",
+   "id": "c3ca43c3",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "67822ce1-8d6d-49be-9dfd-446c29937c35",
+   "id": "f8d1c568",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5489289a-8c73-4ed5-8024-2b6063801f00",
+   "id": "d51c9fdd",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "9dac447e-8c3f-4e19-8f61-18c6a0a8a1de",
+   "id": "cdfe93e3",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "9275a5b0-7dbf-45d6-996c-418a2c2dbd8a",
+   "id": "14fabba5",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e39a54a2-3e84-4f49-b26b-4cbb14404e70",
+   "id": "a26318a5",
    "metadata": {},
    "outputs": [
     {
@@ -1214,10 +1214,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "668b2bc9-6b54-4682-925c-1d386ae64555",
+   "id": "ebad057d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Метрики для параметра \"Соотношение матрица-наполнитель\"')\n",
+    "error(X_test_2['pred1'], df.loc[Ytest1.index.tolist()]['Соотношение матрица-наполнитель']) \n",
+    "print('Метрики для параметра \"Модуль упругости при растяжении, ГПа\"')\n",
+    "error(X_test_2['pred2'], df.loc[Ytest2.index.tolist()]['Модуль упругости при растяжении, ГПа']) \n",
+    "print('Метрики для параметра \"Прочность при растяжении, МПа\"')\n",
+    "error(X_test_2['pred3'], df.loc[Ytest3.index.tolist()]['Прочность при растяжении, МПа']) "
+   ]
   }
  ],
  "metadata": {
